--- a/env-example.yaml
+++ b/env-example.yaml
@@ -4,8 +4,5 @@ sqlserver:
   database: "master"
   uid: "sa"
   pwd: ""
-
-redis:
-  host: "192.168.0.112"
-  port: 6379
-  db: 0
+  port: "8001"
+  worker: 1
